--- a/content/posts/杂记/30而立了,下一个10年我想成为怎样的人.md
+++ b/content/posts/杂记/30而立了,下一个10年我想成为怎样的人.md
@@ -8,11 +8,14 @@ tags = [
 ]
 +++
 
-2025年对我是蛮重要的一年, 2026年我即将正式步入人生的第30年.
+**2025年对我是蛮重要的一年, 2026年我即将正式步入人生的第30年.**
+
 难得在此刻我想做一下年终总结, 过去1年应该是我近些年最满意的一年了.
 
 - 终于入住新房了, 赶在30岁前成功达成有车有房成就.
+- 下班时间改到了6点, 7点到家和8点到家的心境是真滴不一样.
 - 减肥了40斤了, 恢复到了学生时代身材. (再次强调125斤! 我现在见人就提~💖)
+- 有了我自己的猫🐱.
 - 工作还算稳定, 生活比较满意, 情感几乎没有.
 
 我想是时候给人生的下一个10年立一些flag了.
